--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -123,6 +123,7 @@
           for (var i = 0; i < pages.length; ++i) {
             //xlog("pages[i]:");xlog(pages[i]);
             var page = W.component.Component.parseJSON(pages[i]);
+            cur_page = page;
             if (isCreateNewData) {
               page.isNewCreated = true;
             }
@@ -295,6 +296,14 @@
     });
   W.Broadcaster.on('powerme:change:title', function(value){
       $('.xa-title').text(value);
+  });
+  W.Broadcaster.on("qrcode:deleteQrcode", function(value){
+      cur_page.components[0].model.set({
+          qrcode:{
+              ticket: "",
+              name: ""
+          }
+      }, {silent: true});
   });
   </script>
     {% endif %}
