--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -119,7 +119,6 @@
 
 {% if not is_deleted_data %}
   <script type="text/javascript">
-    W.uid = {{ request.manager.id }};
     W.projectId = "{{project_id}}";
     W.activityId = "{{lottery.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
@@ -343,7 +342,7 @@
             page_json: pageJson
           },
           success: function(data) {
-            var previewUrl = '/m/apps/lottery/m_lottery/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
+            var previewUrl = '/m/apps/lottery/m_lottery/?page_id=preview&woid='+W.mid+'&id='+W.projectId;
             window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
           },
           error: function(resp) {
