--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/create_red_envelope_rule.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/create_red_envelope_rule.html
@@ -246,7 +246,7 @@ W.registerUIRole('textarea[data-ui-role="richtext-editor-red"]', function() {
         width: width,
         height:height,
         autoHeight:false,
-        imgSuffix: "uid="+W.uid,
+        imgSuffix: "uid="+W.mid,
         wordCount: true,
         maxCount: maxCount
     });
