--- a/weapp/apps/customerized_apps/event/templates/editor/event_status.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/event_status.html
@@ -223,7 +223,7 @@ $(document).ready(function() {
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
-		var previewUrl = '/m/apps/event/m_event/?woid='+W.uid+'&id='+id;
+		var previewUrl = '/m/apps/event/m_event/?woid='+W.mid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
 	
