--- a/weapp/apps/customerized_apps/event/templates/editor/events.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/events.html
@@ -240,7 +240,7 @@ $(document).ready(function() {
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
-		var previewUrl = '/m/apps/event/m_event/?woid='+W.uid+'&id='+id;
+		var previewUrl = '/m/apps/event/m_event/?woid='+W.mid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
 	
@@ -274,7 +274,7 @@ $(document).ready(function() {
 	$('body').delegate('.xa-copyLinkBtn', 'click', function(event){
 		var $el = $(event.currentTarget);
 		var data_id = $el.attr('data-id');
-        var urlLink = "/m/apps/event/m_event/?webapp_owner_id="+W.uid+"&id="+data_id;
+        var urlLink = "/m/apps/event/m_event/?webapp_owner_id="+W.mid+"&id="+data_id;
 
 		var promotionCopyLinkView = W.getPromotionCopyLinkView({
 			width: 414,
