--- a/weapp/apps/customerized_apps/lottery/templates/editor/lottery_status.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lottery_status.html
@@ -222,7 +222,7 @@ $(document).ready(function() {
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
-		var previewUrl = '/m/apps/lottery/m_lottery/?woid='+W.uid+'&id='+id;
+		var previewUrl = '/m/apps/lottery/m_lottery/?woid='+W.mid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
 	
