--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -91,7 +91,6 @@
 
 {% if not is_deleted_data %}
   <script type="text/javascript">
-    W.uid = {{ request.manager.id }};
     W.projectId = "{{project_id}}";
     W.activityId = "{{powerme.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
@@ -265,7 +264,7 @@
             page_json: pageJson
           },
           success: function(data) {
-            var previewUrl = '/m/apps/powerme/m_powerme/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
+            var previewUrl = '/m/apps/powerme/m_powerme/?page_id=preview&woid='+W.mid+'&id='+W.projectId;
             window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
           },
           error: function(resp) {
