--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_status.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_status.html
@@ -226,7 +226,7 @@ $(document).ready(function() {
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
-		var previewUrl = '/m/apps/vote/m_vote/?woid='+W.uid+'&id='+id;
+		var previewUrl = '/m/apps/vote/m_vote/?woid='+W.mid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
 	
