--- a/weapp/apps/customerized_apps/vote/templates/editor/votes.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/votes.html
@@ -181,6 +181,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
+    W.mid = {{ request.manager.id }};
 	$('body').delegate('.xa-delete', 'click', function(event) {
         console.log('delete');
 		var $el = $(event.target);
