百宝箱，修改mid

--- a/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
@@ -164,7 +164,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-	
+	W.mid = "{{ request.manager.id }}";
 	$('body').delegate('.xa-delete', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
