--- a/weapp/apps/customerized_apps/survey/templates/editor/surveies.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/surveies.html
@@ -182,7 +182,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-	
+	W.mid = "{{ request.manager.id }}";
 	$('body').delegate('.xa-delete', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
