--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -311,6 +311,7 @@ ui-appPage-commonStyle">
   <!-- *end_prunt_task* -->
   
   <script type="text/javascript">
+    W.uid = "{{request.manager.id}}";
     var signStatus = "off";
     W.projectId = "{{project_id}}";
     W.activityId = "{{sign.id}}";
