--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -79,6 +79,7 @@
 
 {% if not is_deleted_data %}
   <script type="text/javascript">
+    W.uid = "{{request.manager.id}}";
     W.projectId = "{{project_id}}";
     W.activityId = "{{survey.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
