--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -91,6 +91,7 @@
 
 {% if not is_deleted_data %}
   <script type="text/javascript">
+    W.uid = "{{request.manager.id}}";
     W.projectId = "{{project_id}}";
     W.activityId = "{{powerme.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
