--- a/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
@@ -79,6 +79,7 @@
   <!-- *end_prunt_task* -->
 {% if not is_deleted_data %}
   <script type="text/javascript">
+    W.uid = "{{request.manager.id}}";
     W.projectId = "{{project_id}}";
     W.activityId = "{{vote.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
