[b_mall_6597][X-Ray]购物车无库存商品变为已失效

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -394,7 +394,8 @@ $(document).ready(function() {
                         var $product = $(this).parents('.xa-product');
                         var $check = $product.find('.xa-check');
                         $(this).data('view').setMaxCount(maxCount);
-                        if(maxCount > 0 && $(this).data('view').count > maxCount){
+
+                        if(maxCount > 0 && $(this).data('view').count > maxCount || $(this).data('view').count == 0){
                             $product.find('.xui-understock').show();
                             $check.removeClass('xui-checkCart').addClass('xui-disabled-radio');
                             view.unselectProduct($product);
