修复百宝箱导出异常；修复预览异常

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -518,7 +518,7 @@ ui-appPage-commonStyle">
             page_json: pageJson
           },
           success: function(data) {
-            var previewUrl = '/m/apps/sign/m_sign/?page_id=preview&woid='+W.mid+'&id='+W.projectId;
+            var previewUrl = '/m/apps/sign/m_sign/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
             window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
           },
           error: function(resp) {
