--- a/weapp/apps/customerized_apps/event/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/workbench.html
@@ -237,7 +237,7 @@
             page_json: pageJson
           },
           success: function(data) {
-            var previewUrl = '/m/apps/event/m_event/?page_id=preview&woid='+W.mid+'&id='+W.projectId;
+            var previewUrl = '/m/apps/event/m_event/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
             window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
           },
           error: function(resp) {
