--- a/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
@@ -242,7 +242,7 @@
             page_json: pageJson
           },
           success: function(data) {
-            var previewUrl = '/m/apps/vote/m_vote/?page_id=preview&woid='+W.mid+'&id='+W.projectId;
+            var previewUrl = '/m/apps/vote/m_vote/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
             window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
           },
           error: function(resp) {
