修改支付使用第三方获取opid机制

--- a/weapp/wxpay/templates/webapp/index_v3.html
+++ b/weapp/wxpay/templates/webapp/index_v3.html
@@ -47,7 +47,7 @@
 		<script type="text/javascript">
 
 			W.isUnderDevelopMode = {% if under_develop %}true{% else %}false{% endif %};
-
+			var component_appid = "{{component_appid}}";
 			var appId = "{{app_id}}";
 			//var appId = 'wxc0889b3d7d577bde';
 			var partnerId = "{{partner_id}}";
@@ -136,9 +136,11 @@
 		    var pay = function() {
 				if (code == '') {
 					var redirect_uri = encodeURIComponent(window.location.href);
-			        var queryString = "appid="+appId+"&redirect_uri="+redirect_uri+"&response_type=code&scope=snsapi_base#wechat_redirect";
-			        var auth_url = "https://open.weixin.qq.com/connect/oauth2/authorize?"+queryString;
-					// alert(auth_url)
+			        //var queryString = "appid="+appId+"&redirect_uri="+redirect_uri+"&response_type=code&scope=snsapi_base#wechat_redirect";
+
+					var queryString = "appid="+appId+"&redirect_uri="+redirect_uri+"&response_type=code&scope=snsapi_base&component_appid="+component_appid+" #wechat_redirect";
+					var auth_url = "https://open.weixin.qq.com/connect/oauth2/authorize?"+queryString;
+					alert(auth_url)
 					setTimeout(function(){document.location.href = auth_url},500);
 				} else {
 					var data = {woid:webappOwnerId, module:'mall',target_api: 'openid/get',appid:appId,secret:secret,code:code};
